--- a/Transformer/Torchtext-DataPreprocessing.ipynb
+++ b/Transformer/Torchtext-DataPreprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,37 @@
     "from torchtext.datasets import Multi30k\n",
     "from torchtext.data import Field, BucketIterator\n",
     "import json\n",
-    "import os"
+    "import os\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeTags(segments):\n",
+    "    ortho = re.sub(\"([\\(\\[]).*?([\\)\\]])\", \"\\g<1>\\g<2>\", segments)\n",
+    "    ortho = ortho.replace(\"[]\",\"-\")[:-1]\n",
+    "\n",
+    "    return ortho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "datasets = ['zulu', 'xhosa', 'ndebele', 'swati']\n",
     "datasetTypes = ['train', 'dev', 'test']\n",
-    "data = open('../Data/zulu/zulu.clean.dev.conll').read()"
+    "data = open('../Data/swati/swati.clean.test.conll').read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -49,21 +63,21 @@
      "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-222-4e51ec6686aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     x = {\n\u001b[1;32m      6\u001b[0m       \u001b[0;34m\"src\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m       \u001b[0;34m\"trg\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     }\n",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-96-e0cefa557b6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     x = {\n\u001b[1;32m      6\u001b[0m       \u001b[0;34m\"src\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m       \u001b[0;34m\"trg\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mremoveTags\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     }\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "file = open(\"validation.txt\", \"w\")\n",
+    "file = open(\"../Data/swati/json/swati-test.txt\", \"w\")\n",
     "\n",
     "for line in data.split('\\n'):\n",
     "    line = line.split(' | ')\n",
     "    x = {\n",
     "      \"src\": line[0],\n",
-    "      \"trg\": line[3],\n",
+    "      \"trg\": removeTags(line[3]),\n",
     "\n",
     "    }\n",
     "    \n",
